samples/cpp/oppositeinnercondition.cpp
void demo(int a, int b)
{
    // 存在完全相反的if条件 //error
    if (a != 3) {
        if (a == 3) {
        }
    }
}